feat: adiciona a connection string do banco local no appsettings

--- a/GearOps.Api/appsettings.json
+++ b/GearOps.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Username=postgres;Password=Lucas1971!;Database=GearOpsDb"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
