--- a/GearOps.Api/appsettings.json
+++ b/GearOps.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Username=postgres;Password=Lucas1971!;Database=GearOpsDb"
+    "DefaultConnection": "Host=localhost;Port=5432;Username=postgres;Password=postgres;Database=GearOpsDb"
   },
   "Logging": {
     "LogLevel": {
